# Auto-2048

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vercel.json
scripts/: vercel-install.sh
src/: main.ts  types.ts
src/autoplay/: AutoPlayer.ts  autoSimulator.ts  benchmark.ts  heuristic.ts  wasmEngine.ts
src/game/: Game.ts  moveLogic.ts
src/input/: InputController.ts
src/render/: Renderer.ts
src/styles/: style.css
src/tests/: Game.test.ts  autoplayer.test.ts  benchmark.test.ts  moveLogic.test.ts  wasmEngine.test.ts
wasm-autoplayer/: Cargo.toml  LICENSE  build.rs
wasm-autoplayer/src/: cuda_rollout.rs  lib.rs
wasm-autoplayer/src/cuda/: rollout.cu
