[package]
name = "wasm-autoplayer"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM search engine for the Auto-2048 Expectimax AutoPlayer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
